--- a/frappe/templates/pages/me.html
+++ b/frappe/templates/pages/me.html
@@ -5,7 +5,8 @@
 {% block page_content %}
 <!-- no-sidebar -->
 <!-- no-cache -->
-<div class="row">
+<div class="container">
+    <div class="row">
 	<div class="col-sm-3">
 		<div class="your-account-info">
 			<div class="avatar avatar-large">
@@ -29,13 +30,29 @@
 	</div>
 	<div class="col-sm-9">
 		<ul class="list-group" style="margin: 15px 0px;">
-			{% for opts in my_account_list -%}
-			<li class="list-group-item"><a href="{{ opts.url }}"
-                    class="no-decoration">
-                <h4>{{ opts.label }}</h4></a></li>
-			{%- endfor %}
+			<li class="list-group-item">
+                <a href="/services" class="no-decoration" >
+                    <h4>خدماتنا</h4>
+                </a>
+            </li>
+			<li class="list-group-item">
+                <a href="/desk" class="no-decoration" >
+                    <h4>لوحة التحكم</h4>
+                </a>
+            </li>
+			<li class="list-group-item">
+                <a href="/edit-profile" class="no-decoration" >
+                    <h4>{{ _("Edit Profile") }}</h4>
+                </a>
+            </li>
+			<li class="list-group-item">
+                <a href="/update-password" class="no-decoration" >
+                    <h4>{{ _("Reset Password") }}</h4>
+                </a>
+            </li>
 		</ul>
 	</div>
+</div>
 </div>
 {% endblock %}
 
